# diagram-analyzer

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: launch.json
docs/: architecture.md  data-models.md  demo-guide.md  implementation-plan.md  learning-guide.md  testing.md  tool-specs.md
frontend/: index.html
frontend/css/: styles.css
frontend/js/: app.js
scripts/: README.md  test_local.py
src/: __init__.py  orchestrator.py
src/agent/: __init__.py  cad_agent.py  callbacks.py  prompts.py  server.py
src/ingestion/: __init__.py  firestore_adapter.py  gcs_adapter.py  normalizer.py
src/models/: __init__.py  analysis.py  component.py  cv.py  diagram.py  ocr.py  text_label.py  tiling.py  title_block.py  trace.py
src/preprocessing/: __init__.py  cv_pipeline.py  docai_client.py  ocr.py  pipeline.py  title_block.py
src/static/: index.html
src/tiling/: __init__.py  tile_generator.py  tile_storage.py
src/tools/: __init__.py  _image_utils.py  _store.py  export_visualization.py  get_overview.py  inspect_component.py  inspect_zone.py  search_text.py  trace_net.py
tests/: conftest.py  test_orchestrator.py
tests/fixtures/: README.md
tests/test_agent/: __init__.py  test_cad_agent.py
tests/test_ingestion/: __init__.py  test_gcs_adapter.py
tests/test_models/: __init__.py  test_bounding_box.py  test_component.py  test_diagram_metadata.py  test_text_label.py  test_tile_pyramid.py  test_title_block.py  test_trace.py
tests/test_preprocessing/: __init__.py  test_ocr.py  test_pipeline.py  test_title_block.py
tests/test_tiling/: __init__.py  test_tile_generator.py  test_tile_storage.py
tests/test_tools/: conftest.py  test_get_overview.py  test_inspect_component.py  test_inspect_zone.py  test_search_text.py  test_trace_net.py
